Also async-to-generator

--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,8 @@
     ]
   ],
   "plugins": [
-    "transform-class-properties",
-    "transform-runtime"
+    "transform-async-to-generator",
+    "transform-runtime",
+    "transform-class-properties"
   ]
 }
