--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     }
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "deepmerge": "^2.1.0",
-    "ne-tag-fns": "^0.6.1",
-    "babel-runtime": "^6"
+    "ne-tag-fns": "^0.6.1"
   }
 }
