--- a/.babelrc
+++ b/.babelrc
@@ -5,13 +5,12 @@
       "env",
       {
         "targets": { "node": "6" },
+        "useBuiltins": false,
         "modules": "commonjs"
       }
     ]
   ],
   "plugins": [
-    "transform-async-to-generator",
-    "transform-runtime",
     "transform-class-properties"
   ]
 }
