Fixed major bug with walkResolverMap
**Changes**
 * Added async versions of EntryInspector, DefaultEntryInspector and walkResolverMap
   * AsyncEntryInspector
   * DefaultAsyncEntryInspector
   * asyncWalkResolverMap
 * Fixed major bug in how walkResolverMap and async counterparts work

**TODO**
 * Add unit tests for all of walkResolverMap.js

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
   },
   "plugins": ["import", "flowtype"],
   "rules": {
-    "brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
-    "indent": ["error", 2]
+    "brace-style": [1, "stroustrup", { "allowSingleLine": true }],
+    "indent": [1, 2]
   }
 }
