--- a/package.json
+++ b/package.json
@@ -1,56 +1,56 @@
 {
-  "name": "ne-schemata",
-  "version": "1.10.0",
-  "description": "GraphQL IDL/Schemata String class to make working with GraphQL easier",
-  "repository": "https://github.com/nyteshade/ne-schemata",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "jest --no-cache",
-    "build": "rm -rf dist/* ; babel -s --source-root src src/ -d dist/"
-  },
-  "keywords": [
-    "SDL",
-    "IDL",
-    "AST",
-    "utility",
-    "GraphQLSchema",
-    "GraphQL"
-  ],
-  "author": "Brielle Harrison",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^23.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-flow": "^6.23.0",
-    "eslint": "^4.19.1",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-flowtype": "^2.49.3",
-    "eslint-plugin-import": "^2.12.0",
-    "graphql": "^14.0.0-rc.2",
-    "jest": "^22.4.3",
-    "jest-environment-node-debug": "^2.0.0"
-  },
-  "peerDependencies": {
-    "graphql": "^0.13.2"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "graphql",
-      "json",
-      "jsx"
+    "name": "ne-schemata",
+    "version": "1.10.0",
+    "description": "GraphQL IDL/Schemata String class to make working with GraphQL easier",
+    "repository": "https://github.com/nyteshade/ne-schemata",
+    "main": "dist/index.js",
+    "scripts": {
+        "test": "jest --no-cache --runInBand",
+        "build": "rm -rf dist/* ; babel -s --source-root src src/ -d dist/"
+    },
+    "keywords": [
+        "SDL",
+        "IDL",
+        "AST",
+        "utility",
+        "GraphQLSchema",
+        "GraphQL"
     ],
-    "verbose": true,
-    "transform": {
-      "^.+\\.graphql": "<rootDir>/jestTransformer",
-      "^.+\\.jsx?o?n?$": "babel-jest"
+    "author": "Brielle Harrison",
+    "license": "MIT",
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-eslint": "^8.2.3",
+        "babel-jest": "^23.0.0",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-flow": "^6.23.0",
+        "eslint": "^4.19.1",
+        "eslint-plugin-babel": "^5.1.0",
+        "eslint-plugin-flowtype": "^2.49.3",
+        "eslint-plugin-import": "^2.12.0",
+        "jest": "^22.4.3",
+        "jest-environment-node-debug": "^2.0.0"
+    },
+    "peerDependencies": {
+        "graphql": "^0.13 || ^0.14"
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "js",
+            "graphql",
+            "json",
+            "jsx"
+        ],
+        "verbose": true,
+        "transform": {
+            "^.+\\.graphql": "<rootDir>/jestTransformer",
+            "^.+\\.jsx?o?n?$": "babel-jest"
+        }
+    },
+    "dependencies": {
+        "deepmerge": "^2.1.0",
+        "ne-tag-fns": "^0.6.1",
+        "pretty-error": "^2.1.1"
     }
-  },
-  "dependencies": {
-    "deepmerge": "^2.1.0",
-    "ne-tag-fns": "^0.6.1"
-  }
 }
