--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "devDependencies": {
         "babel-cli": "^6.26.0",
         "babel-eslint": "^9.0.0",
-        "babel-jest": "^23.0.0",
+        "babel-jest": "^23.6.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-env": "^1.6.1",
         "babel-preset-flow": "^6.23.0",
-        "eslint": "^5.0.1",
-        "eslint-plugin-babel": "^5.1.0",
-        "eslint-plugin-flowtype": "^2.49.3",
-        "eslint-plugin-import": "^2.12.0",
+        "eslint": "^5.6.1",
+        "eslint-plugin-babel": "^5.2.1",
+        "eslint-plugin-flowtype": "^2.50.3",
+        "eslint-plugin-import": "^2.14.0",
+        "flow-bin": "^0.82.0",
         "graphql": "^0.13",
         "jest": "^22.4.3",
         "jest-environment-node-debug": "^2.0.0"
@@ -50,8 +51,8 @@
         }
     },
     "dependencies": {
-        "deepmerge": "^2.1.0",
-        "ne-tag-fns": "^0.6.1",
+        "deepmerge": "^2.2.1",
+        "ne-tag-fns": "^0.6.7",
         "pretty-error": "^2.1.1"
     }
 }
