--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         }
     },
     "dependencies": {
+        "debug": "^4.1.1",
         "deepmerge": "^3.0.0",
         "ne-tag-fns": "^0.6.8",
         "pretty-error": "^2.1.1"
