--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "babel-eslint": "^9.0.0",
         "babel-jest": "^23.6.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-es2015-classes": "^6.24.1",
         "babel-preset-env": "^1.6.1",
         "babel-preset-flow": "^6.23.0",
         "eslint": "^5.10.0",
