--- a/package.json
+++ b/package.json
@@ -1,60 +1,65 @@
 {
-    "name": "ne-schemata",
-    "version": "2.0.1",
-    "description": "GraphQL IDL/Schemata String class to make working with GraphQL easier",
-    "repository": "https://github.com/nyteshade/ne-schemata",
-    "main": "dist/index.js",
-    "scripts": {
-        "test": "jest --no-cache --runInBand",
-        "build": "rm -rf dist/* ; babel -s --source-root src src/ -d dist/"
-    },
-    "keywords": [
-        "SDL",
-        "IDL",
-        "AST",
-        "utility",
-        "GraphQLSchema",
-        "GraphQL"
+  "name": "ne-schemata",
+  "version": "2.0.1",
+  "description": "GraphQL IDL/Schemata String class to make working with GraphQL easier",
+  "repository": "https://github.com/nyteshade/ne-schemata",
+  "main": "dist/index.js",
+  "scripts": {
+    "test": "jest",
+    "build": "babel src --out-dir dist"
+  },
+  "keywords": [
+    "SDL",
+    "IDL",
+    "AST",
+    "utility",
+    "GraphQLSchema",
+    "GraphQL"
+  ],
+  "author": "Brielle Harrison",
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-transform-classes": "^7.2.2",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.4.0",
+    "bili": "^3.1.2",
+    "eslint": "^5.10.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-flowtype": "^3.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "flow-bin": "^0.89.0",
+    "graphql": "^14.1.1",
+    "jest": "^23.4.1",
+    "jest-environment-node-debug": "^2.0.0",
+    "regenerator-runtime": "^0.12.0"
+  },
+  "peerDependencies": {
+    "graphql": "^14"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "graphql",
+      "json",
+      "jsx"
     ],
-    "author": "Brielle Harrison",
-    "license": "MIT",
-    "devDependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-eslint": "^9.0.0",
-        "babel-jest": "^23.6.0",
-        "babel-plugin-transform-class-properties": "^6.24.1",
-        "babel-plugin-transform-es2015-classes": "^6.24.1",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-flow": "^6.23.0",
-        "eslint": "^5.10.0",
-        "eslint-plugin-babel": "^5.3.0",
-        "eslint-plugin-flowtype": "^3.0.0",
-        "eslint-plugin-import": "^2.14.0",
-        "flow-bin": "^0.89.0",
-        "graphql": "^0.13",
-        "jest": "^22.4.3",
-        "jest-environment-node-debug": "^2.0.0"
-    },
-    "peerDependencies": {
-        "graphql": "^0.13 || ^0.14"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "graphql",
-            "json",
-            "jsx"
-        ],
-        "verbose": true,
-        "transform": {
-            "^.+\\.graphql": "<rootDir>/jestTransformer",
-            "^.+\\.jsx?o?n?$": "babel-jest"
-        }
-    },
-    "dependencies": {
-        "debug": "^4.1.1",
-        "deepmerge": "^3.0.0",
-        "ne-tag-fns": "^0.6.8",
-        "pretty-error": "^2.1.1"
+    "verbose": true,
+    "transform": {
+      "^.+\\.graphql": "<rootDir>/jestTransformer",
+      "^.+\\.jsx?o?n?$": "babel-jest"
     }
+  },
+  "dependencies": {
+    "debug": "^4.1.1",
+    "deepmerge": "^3.0.0",
+    "ne-tag-fns": "^0.6.8",
+    "pretty-error": "^2.1.1"
+  }
 }
