--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/plugin-transform-classes": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -57,6 +58,7 @@
     }
   },
   "dependencies": {
+    "@babel/runtime": "^7.3.1",
     "debug": "^4.1.1",
     "deepmerge": "^3.0.0",
     "ne-tag-fns": "^0.6.8",
