Resolving security concerns

--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "eslint-plugin-import": "^2.20.1",
     "flow-bin": "^0.103.0",
     "graphql": "^14.6.0",
+    "minimist": "^1.2.2",
     "jest": "^25.1.0",
     "jest-environment-node-debug": "^2.0.0",
+    "serialize-javascript": "^2.1.1",
     "regenerator-runtime": "^0.13.5"
   },
   "peerDependencies": {
