--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ne-schemata",
-  "version": "2.2.2",
+  "version": "2.3.0",
   "description": "GraphQL IDL/Schemata String class to make working with GraphQL easier",
   "repository": "https://github.com/nyteshade/ne-schemata",
   "main": "dist/index.js",
@@ -29,22 +29,22 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-flow": "^7.8.3",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.4.0",
-    "bili": "^4.8.1",
+    "babel-jest": "^28.1.1",
+    "bili": "^1.5.3",
     "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
     "flow-bin": "^0.103.0",
-    "graphql": "^14.6.0",
-    "minimist": "^1.2.2",
-    "jest": "^25.1.0",
+    "graphql": "^16",
+    "jest": "^28.1.1",
     "jest-environment-node-debug": "^2.0.0",
-    "serialize-javascript": "^2.1.1",
-    "regenerator-runtime": "^0.13.5"
+    "minimist": "^1.2.2",
+    "regenerator-runtime": "^0.13.5",
+    "serialize-javascript": "^6.0.0"
   },
   "peerDependencies": {
-    "graphql": "^14"
+    "graphql": "^16"
   },
   "jest": {
     "moduleFileExtensions": [
