--- a/package.json
+++ b/package.json
@@ -19,29 +19,21 @@
   "author": "Brielle Harrison",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.7",
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.23.2",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/plugin-transform-classes": "^7.8.6",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-flow": "^7.8.3",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^28.1.1",
-    "bili": "^1.5.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^4.6.0",
-    "eslint-plugin-import": "^2.20.1",
-    "flow-bin": "^0.103.0",
+    "@babel/plugin-transform-classes": "^7.22.15",
+    "@babel/plugin-transform-runtime": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-flow": "^7.22.15",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.52.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.29.0",
     "graphql": "^16",
-    "jest": "^28.1.1",
-    "jest-environment-node-debug": "^2.0.0",
-    "minimist": "^1.2.2",
-    "regenerator-runtime": "^0.13.5",
-    "serialize-javascript": "^6.0.0"
+    "jest": "^29.7.0"
   },
   "peerDependencies": {
     "graphql": "^16"
@@ -60,10 +52,12 @@
     }
   },
   "dependencies": {
-    "@babel/runtime": "^7.8.7",
-    "debug": "^4.2.0",
-    "deepmerge": "^4.0.0",
-    "ne-tag-fns": "^0.6.9",
-    "pretty-error": "^2.1.1"
+    "@babel/runtime": "^7.23.2",
+    "babel-eslint": "^10.1.0",
+    "debug": "^4.3.4",
+    "deepmerge": "^4.3.1",
+    "lodash": "^4.17.21",
+    "ne-tag-fns": "^0.7.0",
+    "pretty-error": "^4.0.0"
   }
 }
