--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8.52.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.29.0",
+    "flow-bin": "^0.220.0",
     "graphql": "^16",
     "jest": "^29.7.0"
   },
@@ -59,6 +60,7 @@
     "babel-eslint": "^10.1.0",
     "debug": "^4.3.4",
     "deepmerge": "^4.3.1",
+    "flow-parser": "^0.220.0",
     "lodash": "^4.17.21",
     "ne-tag-fns": "^0.7.0",
     "pretty-error": "^4.0.0"
