--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.2",
+    "@graphql-tools/utils": "^10.0.8",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.33.1",
     "debug": "^4.3.4",
