--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "babel src --out-dir dist"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=19.0.0"
   },
   "keywords": [
     "SDL",
@@ -22,22 +22,16 @@
   "author": "Brielle Harrison",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.23.0",
-    "@babel/core": "^7.23.2",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.23.2",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/plugin-syntax-top-level-await": "^7.14.5",
-    "@babel/plugin-transform-class-static-block": "^7.22.11",
-    "@babel/plugin-transform-classes": "^7.22.15",
-    "@babel/plugin-transform-runtime": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-flow": "^7.22.15",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
+    "@babel/plugin-proposal-decorators": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-flow": "^7.23.3",
     "babel-jest": "^29.7.0",
-    "eslint": "^8.52.0",
+    "eslint": "^8.55.0",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.29.0",
-    "flow-bin": "^0.220.0",
+    "eslint-plugin-import": "^2.29.1",
+    "flow-bin": "^0.224.0",
     "graphql": "^16",
     "jest": "^29.7.0"
   },
@@ -58,13 +52,12 @@
     }
   },
   "dependencies": {
-    "@babel/runtime": "^7.23.2",
-    "@graphql-tools/utils": "^10.0.8",
-    "babel-eslint": "^10.1.0",
-    "core-js": "^3.33.1",
+    "@graphql-tools/utils": "^10.0.11",
+    "@babel/eslint-parser": "^7.23.3",
+    "core-js": "^3.34.0",
     "debug": "^4.3.4",
     "deepmerge": "^4.3.1",
-    "flow-parser": "^0.220.0",
+    "flow-parser": "^0.224.0",
     "lodash": "^4.17.21",
     "ne-tag-fns": "^0.7.0",
     "pretty-error": "^4.0.0"
