--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "repository": "https://github.com/nyteshade/ne-schemata",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
-    "build": "babel src --out-dir dist"
+    "test": "vitest",
+    "build": "rm -rf dist/* && babel src --out-dir dist -s both"
   },
   "engines": {
     "node": ">=19.0.0"
@@ -22,44 +22,31 @@
   "author": "Brielle Harrison",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.6",
-    "@babel/plugin-proposal-decorators": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
-    "@babel/preset-flow": "^7.23.3",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.29.1",
-    "flow-bin": "^0.224.0",
-    "graphql": "^16",
-    "jest": "^29.7.0"
+    "@babel/cli": "^7.25.6",
+    "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
+    "@babel/plugin-transform-flow-strip-types": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-flow": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "babel-plugin-syntax-hermes-parser": "^0.23.1",
+    "eslint": "^9.11.1",
+    "flow-bin": "^0.247.0",
+    "graphql": "^16.9.0",
+    "htmlparser2": "^9.1.0",
+    "renderkid": "^3.0.0",
+    "typescript": "^5.6.2",
+    "vitest": "^2.1.1"
   },
   "peerDependencies": {
     "graphql": "^16"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "graphql",
-      "json",
-      "jsx"
-    ],
-    "verbose": true,
-    "transform": {
-      "^.+\\.graphql": "<rootDir>/jestTransformer",
-      "^.+\\.jsx?o?n?$": "babel-jest"
-    }
-  },
   "dependencies": {
-    "@graphql-tools/utils": "^10.0.11",
-    "@babel/eslint-parser": "^7.23.3",
-    "core-js": "^3.34.0",
-    "debug": "^4.3.4",
+    "@graphql-tools/utils": "^10.5.4",
+    "core-js": "^3.38.1",
+    "debug": "^4.3.7",
     "deepmerge": "^4.3.1",
-    "flow-parser": "^0.224.0",
-    "lodash": "^4.17.21",
-    "ne-tag-fns": "^0.7.0",
-    "pretty-error": "^4.0.0"
-  }
+    "ne-tag-fns": "^0.7.0"
+  },
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
