--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "@nyteshade/ne-schemata",
   "version": "3.6.1",
   "description": "GraphQL IDL/Schemata String class to make working with GraphQL easier",
+  "exports": {
+    ".": "./dist/index.js",
+    "./classes": "./dist/classes/index.js",
+    "./utils": "./dist/utils/index.js",
+    "./errors": "./dist/errors/index.js"
+  },
   "repository": "https://github.com/nyteshade/ne-schemata",
   "main": "dist/index.js",
   "scripts": {
     "test": "vitest",
+    "repl": "node repl.bootstrap.js",
     "build": "rm -rf dist/* && babel src --out-dir dist -s both"
   },
   "engines": {
-    "node": ">=19.0.0"
+    "node": ">=20.0.0"
   },
   "keywords": [
     "SDL",
@@ -34,6 +41,7 @@
     "flow-bin": "^0.247.0",
     "graphql": "^16.9.0",
     "htmlparser2": "^9.1.0",
+    "lodash": "^4.17.21",
     "renderkid": "^3.0.0",
     "typescript": "^5.6.2",
     "vitest": "^2.1.1"
@@ -43,9 +51,13 @@
   },
   "dependencies": {
     "@graphql-tools/utils": "^10.5.4",
+    "@nejs/basic-extensions": "^2.15.0",
+    "@nejs/extension": "^2.20.0",
     "core-js": "^3.38.1",
     "debug": "^4.3.7",
+    "debug-logger": "^0.4.1",
     "deepmerge": "^4.3.1",
+    "ms": "^2.1.3",
     "ne-tag-fns": "^0.7.0"
   },
   "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
